--- a/index.html
+++ b/index.html
@@ -1,59 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>TuRiMo | Tullahan River Monitoring</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
-<style>
-body 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-  position: relative;
-}
-.topnav #myLinks {
-  display: none;
-}
-.topnav a {
-  color: white;
-  padding: 14px 16px;
-  text-decoration:solid;
-  font-size: 30px;
-  display: block;
-  text-align: center;
-}
-.topnav a.icon {
-  background: black;
-  display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-.active {
-  background-color: #4CAF50;
-  color: white;
-}
-</style>
-    <body>
-        <div class="topnav">
-  <a href="#home" class="active">Tullahan River Monitoring</a>
-  <div id="myLinks">
-    <a href="#news">Home</a>
-    <a href="#contact">Stream</a>
-    <a href="#about">News</a>
-  </div>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-    </div>
+
+<body>
+
+    <nav>
+        <div class="nav-wrapper green darken-2">
+            <a href="#!" class="brand-logo">Tullahan River Monitoring</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="stream.html">Stream</a></li>
+                <li><a href="news.html">News</a></li>
+                <form id="signup-form">  
+                </form>
+                <button id="signout" class="logout">Sign out</button>
+            </ul>
+        </div>
+    </nav>
+
+    <ul class="sidenav" id="mobile-demo">
+        <li><a href="home.html">Home</a></li>
+        <li><a href="stream.html">Stream</a></li>
+        <li><a href="news.html">News</a></li>
+        <button id="signout" class="logout">Sign out</button>
+    </ul>
+
+
     <div class="row">
         <form class="col s12" id="createComment">
             <div class="row">
@@ -62,12 +44,18 @@ body
                     <textarea id="commentContent" class="materialize-textarea" required></textarea>
                     <label for="commentContent">Comment Now</label>
                 </div>
-              </div>
+            </div>
+            <div class="logout">
             <button class="btn waves-effect waves-light">Send
               <i class="material-icons right">send</i>
-          </button> Not logged in. <a href="login.html">Log in here first</a>
+          </button> 
+        </div>
+         <span class="logged-in">Not logged in. <a href="login.html">Log in here first</a></span> 
         </form>
+
+
     </div>
+
 
     <!-- JavaScript -->
     <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
@@ -84,23 +72,17 @@ body
             messagingSenderId: "905578158491",
             appId: "1:905578158491:web:6a6bd9b125603bdb7c293e",
             measurementId: "G-FQ8LEKM1J2"
-            };
-            firebase.initializeApp(firebaseConfig);
-            const auth = firebase.auth();
+        };
+        firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
     </script>
-    <script>
-    function myFunction() {
-      var x = document.getElementById("myLinks");
-      if (x.style.display === "block") {
-      x.style.display = "none";
-      } else {
-      x.style.display = "block";
-      }
-      }
-</script>
-    <script src="js/jquery-3.5.1.min.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="js/comment.js" type="text/javascript"></script>
+
+    <!-- <script src="js/comment.js" type="text/javascript"></script> -->
     <script src="js/signout.js" type="text/javascript"></script>
+    <script src="js/index.js" type="text/javascript"></script>
+
 </body>
+
 </html>
