--- a/public/stream.html
+++ b/public/stream.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
     <!-- NAVIGATION BAR -->
     <nav>
         <div class="nav-wrapper green">
@@ -20,51 +19,60 @@
                 <a href="index.html" class="brand-logo">Tullahan River Monitoring</a>
                 <a href="#" data-target="mobile-menu" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li class="waves-effect"><a href="stream.html">Stream</a></li>
+                    <li class="waves-effect"><a href="index.html">Home</a></li>
+                    <li class="active"><a href="stream.html">Stream</a></li>
                     <li class="waves-effect"><a href="news.html">News</a></li>
-                    <li class="logged-in"><a href="#!" id="signout">Sign out</a></li>
+                    <li class="logged-in"><a class="waves-effect" href="#!" id="signout">Sign out</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <ul class="sidenav" id="mobile-menu">
-        <li class="active"><a href="index.html"><i class="small material-icons">home</i>Home</a></li>
-        <li><a href="stream.html"><i class="small material-icons">stream</i>Stream</a></li>
+        <li><a href="index.html"><i class="small material-icons">home</i>Home</a></li>
+        <li class="active"><a href="stream.html"><i class="small material-icons">stream</i>Stream</a></li>
         <li><a href="news.html"><i class="small material-icons">import_contacts</i>News</a></li>
-        <li class="logged-in"><a href="#!" id="signout"><i class="small material-icons">close</i>Sign out</a></li>
+        <li class="logged-in"><a href="#!" id="signout"><i class="material-icons">close</i>Sign out</a></li>
     </ul>
 
-    <!-- FIRST COLUMN -->
+
     <div class="row">
-        <div class="container">
-            <div class="col s4">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col s4">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col s4">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+        <!-- VIDEO STREAM  -->
+        <div class="col s12">
+            <div class="row">
+                <div class="container">
+                    <div class="video-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/zofBinqC2F4?autoplay=1&controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
         </div>
+
+        <!-- POST COMMENT -->
+
+        <form class="col s12" id="createComment">
+            <div class="row">
+                <div class="container">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">insert_comment</i>
+                        <textarea id="content" class="materialize-textarea" required></textarea>
+                        <label for="content">Write Something...</label>
+                    </div>
+                    <button class="btn waves-effect green waves-light disabled" id="hide">Submit
+                    <i class="material-icons right">send</i>
+                </button>
+                    <span class="logged-out">Not Logged In.<a href="login.html"> Log In Here First!</a></span>
+                </div>
+            </div>
+        </form>
+
     </div>
+
+    <!-- COMMENT SECTION -->
+    <ul class="collection comment ">
+
+    </ul>
+
 
 
 
@@ -101,6 +109,7 @@
     </script>
 
     <script src="js/index.js" type="text/javascript"></script>
+    <script src="js/comment.js" type="text/javascript"></script>
     <script src="js/signout.js" type="text/javascript"></script>
 
 </body>
